[package]
name = "beacon"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.dev]
opt-level = 2            # O2 optimization
debug = false            # No debug symbols
debug-assertions = false # Removes debug_assert! and related
overflow-checks = false  # Allows wrapping/overflow without panic
